fixed modal display issues and text alignments.

--- a/app/javascript/snap/styles/components/_base.scss
+++ b/app/javascript/snap/styles/components/_base.scss
@@ -72,7 +72,10 @@ p {
 }
 
 .ReactModal__Body--open {
-    overflow-y: hidden;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 .Modal {
@@ -132,6 +135,12 @@ p {
     }
 
     .reset {
+
+        .fa {
+            position: relative;
+            top: 50%;
+            transform:translateY(-50%);
+        }
               
         .title {
             margin-top: 20vh;
@@ -147,8 +156,15 @@ p {
     }
 
     .bookmark {
+
+        .fa {
+            position: relative;
+            top: 50%;
+            transform:translateY(-50%);
+        }
+
         .picture {
-            margin-top: 5vh;
+            margin-top: 2vh;
             img {
                 width: 100%;
                 height: 25vh;
@@ -156,7 +172,7 @@ p {
         }
     
         .message {
-            margin: 3vh;
+            margin: 2vh 3vh;
         }
     
         form {
@@ -221,20 +237,35 @@ input[type=email].error {
 @media only screen and (min-device-width: 320px) and (max-device-height: 667px) and (orientation : portrait) {
 /* Styles */
 
-* {
-    font-size: 1rem;
-}
- 
-h1 {
-    font-size: 2rem;
-    margin-top: 0;
-    line-height: 1;
-}
+    * {
+        font-size: 1rem;
+    }
+    
+    h1 {
+        font-size: 2rem;
+        margin-top: 0;
+        line-height: 1;
+    }
 
-h2 {
-    font-size: 1.2rem;
-}
+    h2 {
+        font-size: 1.2rem;
+    }
 
+    .Modal {
+        .bookmark {
+            .picture {
+                margin-top: 2vh;
+                img {
+                    width: 100%;
+                    height: 22vh;
+                }
+            }
+        
+            .message {
+                margin: 2vh 3vh;
+            }
+        }
+    }
 
 }
 
